--- a/views/alquileres/index.ejs
+++ b/views/alquileres/index.ejs
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <nav>
-        <ul>
-            <li><a href="/">Loguearse</a></li>
-        </ul>
-    </nav>
-    <h1>home con msj</h1>
+    <%- include('../partials/nav.ejs') %>
+    <h1>Alquileres</h1>
+    <main>
+        <h1>lista de alquileres</h1>
+    </main>
 </body>
-
 </html>
