--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <li><a href="/">Loguearse</a></li>
-        </ul>
-    </nav>
-    HOMEEE
+    <%- include("./partials/nav") %>
+        <h1>home con msj</h1>
+
+        <main>
+            <div class="home_card">
+                <h4>Ventas</h4>
+                <button><a href="ventas">Acceder</a></button>
+            </div>
+            <div class="home_card">
+                <h4>Alquileres</h4>
+                <button><a href="ventas">Acceder</a></button>
+
+            </div>
+            <div class="home_card">
+                <h4>Contenedores</h4>
+                <button><a href="ventas">Acceder</a></button>
+
+            </div>
+            <div class="home_card">
+                <h4>Stock</h4>
+                <button><a href="ventas">Acceder</a></button>
+
+            </div>
+            <div class="home_card">
+                <h4>Clientes</h4>
+                <button><a href="ventas">Acceder</a></button>
+
+            </div>
+            <div class="home_card">
+                <h4>Transacciones</h4>
+                <button><a href="ventas">Acceder</a></button>
+
+            </div>
+        </main>
+
 </body>
+
 </html>
