--- a/views/login/create.ejs
+++ b/views/login/create.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Crear un usuario</h1>
-    <form method="post" action="/login/postUser">
+    <form method="post" action="/create">
         <label for="user">Usuario:</label>
         <input type="text" name="user" id="user">
         <label for="password">Contraseñaasa:</label>
