--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,12 @@
 <nav>
     <ul>
         <li><a href="/home">Home</a></li>
-        <li><a href="ventas">Ventas</a></li>
-        <li><a href="alquileres">Alquileres</a></li>
-        <li>Contenedores</li>
-        <li>Stock</li>
-        <li>Clientes</li>
-        <li>Transacciones</li>
-        <li>Configuraciones</li>
+        <li><a href="/ventas">Ventas</a></li>
+        <li><a href="/alquileres">Alquileres</a></li>
+        <li><a href="/contenedores">Contenedores</a></li>
+        <li><a href="/stock">Stock</a></li>
+        <li><a href="/clientes">Clientes</a></li>
+        <li><a href="/transacciones">Transacciones</a></li>
+        <li><a href="/configuraciones">Configuraciones</a></li>
     </ul>
 </nav>
