--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,33 +13,33 @@
         <h1>home con msj</h1>
 
         <main>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Ventas</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/ventas">Acceder</a></button>
             </div>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Alquileres</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/alquileres">Acceder</a></button>
 
             </div>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Contenedores</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/contenedores">Acceder</a></button>
 
             </div>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Stock</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/stock">Acceder</a></button>
 
             </div>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Clientes</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/clientes">Acceder</a></button>
 
             </div>
-            <div class="home_card">
+            <div class="cards_main">
                 <h4>Transacciones</h4>
-                <button><a href="ventas">Acceder</a></button>
+                <button><a href="/transacciones">Acceder</a></button>
 
             </div>
         </main>
