--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,11 @@
+aside {
+  background-color: rgb(94, 186, 94);
+}
+
 main {
-  background-color: rgb(192, 175, 175);
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(71, 71, 71);
 }
 
 /*# sourceMappingURL=styles.css.map */
