--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,34 +12,34 @@
     <%- include("./partials/nav") %>
         <h1>home con msj</h1>
 
-        <main>
+        <main id="home">
             <div class="cards_main">
                 <h4>Ventas</h4>
-                <button><a href="/ventas">Acceder</a></button>
+                <a href="/ventas" class="btn_card">Acceder</a>
             </div>
             <div class="cards_main">
                 <h4>Alquileres</h4>
-                <button><a href="/alquileres">Acceder</a></button>
+                <a href="/alquileres" class="btn_card">Acceder</a>
 
             </div>
             <div class="cards_main">
                 <h4>Contenedores</h4>
-                <button><a href="/contenedores">Acceder</a></button>
+                <a href="/contenedores" class="btn_card">Acceder</a>
 
             </div>
             <div class="cards_main">
                 <h4>Stock</h4>
-                <button><a href="/stock">Acceder</a></button>
+                <a href="/stock" class="btn_card">Acceder</a>
 
             </div>
             <div class="cards_main">
                 <h4>Clientes</h4>
-                <button><a href="/clientes">Acceder</a></button>
+                <a href="/clientes" class="btn_card">Acceder</a>
 
             </div>
             <div class="cards_main">
                 <h4>Transacciones</h4>
-                <button><a href="/transacciones">Acceder</a></button>
+                <a href="/transacciones" class="btn_card">Acceder</a>
 
             </div>
         </main>
