--- a/views/ventas/index.ejs
+++ b/views/ventas/index.ejs
@@ -53,12 +53,11 @@
                 </ul>
             </section>
 
-            <aside class="carrito">
+            <aside id="carrito">
                 <h3>Carrito</h3>
                 <div id="cart">
                     <ul id="cart_items"></ul>
                 </div>
-                <button>Finalizar compra</button>
             </aside>
         </main>
         <script src="/javascript/ventas.js"></script>
